feat: modify general style

--- a/apps/web/src/styles/index.less
+++ b/apps/web/src/styles/index.less
@@ -1,6 +1,10 @@
 @import url('@milesight/shared/src/styles/index.less');
 @import url('./mui-polyfill.less');
 
+html {
+    font-family: @font-family;
+}
+
 body {
     background-color: var(--body-background);
     .text-size(@font-size-base);
