--- a/packages/shared/src/styles/variables.less
+++ b/packages/shared/src/styles/variables.less
@@ -64,12 +64,12 @@
 // Border Radius
 @border-radius-xxs: 2px;
 @border-radius-xs: 4px;
-@border-radius-sm: 8px;
-@border-radius-md: 16px;
+@border-radius-sm: 6px;
+@border-radius-md: 12px;
 @border-radius-lg: 32px;
 @border-radius-xxl: 50%;
 @border-base: 1px solid var(--border-color-base);
-@border-radius-base: @border-radius-xs;
+@border-radius-base: @border-radius-sm;
 
 // Box Shadow
 @shadow-1: 0 2px 4px 0 rgba(0, 0, 0, 0.01), 0 3px 6px 3px rgba(0, 0, 0, 0.01), 0 2px 6px 0 rgba(0, 0, 0, 0.03);
