feat: mui dialog ajustment

--- a/apps/web/src/styles/mui-polyfill.less
+++ b/apps/web/src/styles/mui-polyfill.less
@@ -60,6 +60,13 @@ input.@{mui-prefix}InputBase-input {
     }
 }
 
+// -----------Dialog---------------
+.@{mui-prefix}Dialog-container {
+    .@{mui-prefix}Paper-root.@{mui-prefix}Dialog-paper {
+        border-radius: @border-radius-md;
+    }
+}
+
 [data-theme='dark'] input.@{mui-prefix}InputBase-input {
     &:focus {
         box-shadow: 0 0 0 1000px #2b2b2b inset;
