feat: dashboard ui ajustment optimisation effect

--- a/apps/web/src/pages/dashboard/style.less
+++ b/apps/web/src/pages/dashboard/style.less
@@ -134,6 +134,10 @@
             background: var(--main-background);
             border-radius: @border-radius-md;
 
+            &.none-user-select {
+                user-select: none;
+            }
+
             &-main {
                 display: flex;
                 width: 100%;
