--- a/apps/web/src/pages/dashboard/components/widgets/style.less
+++ b/apps/web/src/pages/dashboard/components/widgets/style.less
@@ -1,10 +1,26 @@
+@primary-color-8: #7b4efa;
+
 .react-grid-item {
     z-index: 9;
+    touch-action: auto !important;
     transition: all 0.2s ease;
+
+    &.cssTransforms {
+        transition-property: transform;
+    }
+
+    &.react-draggable-dragging {
+        transition: none;
+        will-change: transform;
+    }
+
+    &.resizing {
+        will-change: width, height;
+    }
 
     &.react-grid-placeholder {
         z-index: 2;
-        background: rgba(31, 35, 41, 0.08) !important;
+        background: fade(@primary-color-8, 8%) !important;
         border-radius: 16px !important;
         opacity: 1 !important;
         user-select: none;
@@ -13,5 +29,5 @@
 }
 
 .slow-transition-react-grid-layout {
-    transition: all 1s ease !important;
+    transition: all 0.1s ease !important;
 }
