fix: The TestDrawer body srollable

--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/test-drawer/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/test-drawer/style.less
@@ -50,6 +50,7 @@
         flex: 1;
         height: 0;
         padding: 0 @padding-xl @padding-xl;
+        overflow: auto;
 
         .@{prefix}-code-editor {
             height: 200px;
