--- a/apps/web/src/pages/workflow/views/editor/components/topbar/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/topbar/style.less
@@ -50,7 +50,8 @@
 
             .@{mui-prefix}ToggleButtonGroup-grouped {
                 display: inline-block;
-                padding: @padding-xs @padding-sm;
+                padding-right: @padding-sm;
+                padding-left: @padding-sm;
                 border: none;
                 border-radius: @border-radius-base;
                 .text-size(@font-size-base);
