feat: optimize dashboard resizing scrolling effect

--- a/apps/web/src/pages/dashboard/style.less
+++ b/apps/web/src/pages/dashboard/style.less
@@ -9,7 +9,7 @@
 
     .@{prefix}-tab-content {
         flex: 1;
-        padding: @padding-lg 0;
+        padding: @padding-lg 0 0 0;
         overflow: hidden;
         background: var(--gray-color-2);
 
