fix: use primary text color in TablePro footer

--- a/apps/web/src/components/table-pro/components/footer/style.less
+++ b/apps/web/src/components/table-pro/components/footer/style.less
@@ -46,7 +46,7 @@
         .@{mui-prefix}TablePagination-selectLabel,
         .@{mui-prefix}TablePagination-displayedRows {
             margin: 0;
-            color: var(--text-color-secondary);
+            // color: var(--text-color-secondary);
         }
     }
 }
