--- a/apps/web/src/plugin/render/style.less
+++ b/apps/web/src/plugin/render/style.less
@@ -2,3 +2,13 @@
     width: 100%;
     height: 100%;
 }
+
+.reset-chart-zoom {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    display: none;
+    border: @border-base;
+    border-radius: @border-radius-xxl;
+    cursor: pointer;
+}
