feat: ui optimization for Input, Select, Button components

--- a/apps/web/src/components/table-pro/style.less
+++ b/apps/web/src/components/table-pro/style.less
@@ -15,6 +15,12 @@
             align-items: center;
         }
 
+        .@{table-pro}__topbar-search {
+            .@{mui-prefix}InputBase-input {
+                padding-left: 0;
+            }
+        }
+
         .@{table-pro}__topbar-sort {
             padding-left: @padding-xs;
         }
