feat: ui optimization for Toast component

--- a/apps/web/src/components/table-pro/components/footer/style.less
+++ b/apps/web/src/components/table-pro/components/footer/style.less
@@ -28,8 +28,8 @@
             .@{mui-prefix}TablePagination-select {
                 min-width: 30px;
                 min-height: auto;
-                padding-top: @padding-xxs;
-                padding-bottom: @padding-xxs;
+                padding-top: @padding-xxs - 1;
+                padding-bottom: @padding-xxs - 1;
                 line-height: (@ms-table-pro-footer-button-height - 2 * @padding-xxs);
                 text-align: left;
                 text-align-last: left;
