--- a/packages/shared/src/components/toast/style.less
+++ b/packages/shared/src/components/toast/style.less
@@ -1,17 +1,21 @@
 .@{prefix}-toast {
     display: flex;
     align-items: center;
-    padding: @padding-xs @padding-md;
+    padding: @padding-sm @padding-md;
     background-color: var(--component-background);
     border-radius: @border-radius-base;
     box-shadow: @shadow-2;
 
-    .text-size(@font-size-lg);
+    .text-size(@font-size-base);
 
     &-icon {
         display: flex;
         align-items: center;
         margin-right: @margin-xs;
+
+        .@{mui-prefix}SvgIcon-root {
+            font-size: 22px;
+        }
     }
 
     &.info {
