--- a/apps/web/src/plugin/plugins/switch/view/style.module.less
+++ b/apps/web/src/plugin/plugins/switch/view/style.module.less
@@ -1,11 +1,11 @@
 .switch-wrapper {
     display: flex;
     flex: 1;
-    align-items: center;
+    flex-direction: column;
     width: 100%;
     min-width: 100%;
     height: 100%;
-    padding: 20px;
+    padding: @padding-xs @padding-md;
     overflow: hidden;
     background: var(--main-background);
 
@@ -14,6 +14,7 @@
         width: 312px;
         min-width: auto;
         height: 96px;
+        border-radius: @border-radius-md;
     }
 
     .content {
@@ -32,10 +33,7 @@
     .icon {
         display: flex;
         align-items: center;
-        justify-content: center;
-        padding: @padding-sm;
-        margin-right: @margin-md;
-        background-color: var(--gray-color-1);
-        border-radius: @border-radius-base;
+        justify-content: space-between;
+        margin-bottom: @margin-xxs;
     }
 }
