--- a/apps/web/src/plugin/plugins/trigger/view/style.less
+++ b/apps/web/src/plugin/plugins/trigger/view/style.less
@@ -7,6 +7,10 @@
     color: var(--white);
     cursor: pointer;
 
+    &:hover {
+        opacity: 0.9;
+    }
+
     &-main {
         position: relative;
         z-index: 1;
