--- a/apps/web/src/pages/dashboard/style.less
+++ b/apps/web/src/pages/dashboard/style.less
@@ -160,6 +160,7 @@
                     margin-left: @margin-xs;
                     line-height: 0;
                     color: rgba(0, 0, 0, 0.54);
+                    background-color: var(--white);
                     border: @border-base;
                     border-radius: 50%;
                     cursor: pointer;
