--- a/apps/web/src/plugin/render/style.less
+++ b/apps/web/src/plugin/render/style.less
@@ -8,6 +8,7 @@
     top: 10px;
     right: 10px;
     display: none;
+    background-color: var(--white);
     border: @border-base;
     border-radius: @border-radius-xxl;
     cursor: pointer;
