feat: ui optimization for workflow config panel

--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/more-menu/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/more-menu/style.less
@@ -1,4 +1,11 @@
 .@{prefix}-config-panel-more-menu {
+    display: flex;
+
+    .@{mui-prefix}IconButton-root {
+        padding: @padding-xxs;
+        font-size: @font-size-lg;
+    }
+
     &-popover {
         .@{mui-prefix}Paper-root {
             border-radius: @border-radius-sm;
