--- a/apps/web/src/pages/workflow/views/editor/components/controls/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/controls/style.less
@@ -13,6 +13,7 @@
 
     .@{mui-prefix}ButtonGroup-root {
         .@{mui-prefix}ButtonBase-root {
+            padding: (@padding-xs - 2) @padding-xs;
             color: var(--text-color-secondary);
             border-color: var(--border-color-base);
 
@@ -20,5 +21,9 @@
                 opacity: 0.5;
             }
         }
+    }
+
+    .add-button {
+        padding: (@padding-xs - 2) @padding-xs;
     }
 }
