--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/conditions-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/conditions-input/style.less
@@ -56,7 +56,7 @@
 
     &-item-conditions {
         position: relative;
-        margin-bottom: @margin-xl;
+        margin-bottom: @margin-md;
         border-bottom: 1px solid var(--border-color-base);
 
         &.multiple-conditions {
@@ -70,7 +70,7 @@
         .logic-operator {
             position: absolute;
             top: 12px;
-            bottom: 96px;
+            bottom: 72px;
             left: 28px;
             display: none;
             width: 36px;
@@ -181,7 +181,7 @@
         }
 
         .@{prefix}-conditions-input-add-btn {
-            margin: @margin-sm 0 @margin-xl;
+            margin: @margin-xxs 0 @margin-md;
         }
     }
 
