--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/editable-text/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/editable-text/style.less
@@ -1,5 +1,8 @@
 .@{prefix}-editable-text {
+    height: @font-size-xl + 10px;
+
     &-view {
+        height: 100%;
         padding: 0 @padding-xxs;
         border: 1px solid transparent;
         border-radius: @border-radius-base;
@@ -8,6 +11,10 @@
 
         &:hover {
             border-color: var(--border-color-main);
+        }
+
+        &.is-placeholder {
+            color: var(--text-color-secondary);
         }
     }
 
@@ -20,5 +27,9 @@
         border-radius: @border-radius-base;
         outline: none;
         .text-size(@font-size-xl);
+
+        &::placeholder {
+            color: var(--text-color-secondary);
+        }
     }
 }
