--- a/apps/web/src/pages/dashboard/style.less
+++ b/apps/web/src/pages/dashboard/style.less
@@ -66,7 +66,8 @@
         &-contain {
             flex: 1;
             height: 100%;
-            padding: 24px 20px 0 0;
+            padding: 21px 20px 0 0;
+            color: var(--text-color-secondary);
         }
     }
 
