--- a/apps/web/src/styles/mui-polyfill.less
+++ b/apps/web/src/styles/mui-polyfill.less
@@ -17,7 +17,7 @@
         text-transform: none;
 
         &.@{mui-prefix}-selected {
-            font-weight: @font-weight-bold;
+            font-weight: @font-weight-medium;
         }
 
         &::after {
@@ -25,7 +25,7 @@
             height: 1px;
             margin-bottom: -1px;
             overflow: hidden;
-            font-weight: @font-weight-bold;
+            font-weight: @font-weight-medium;
             visibility: hidden;
             content: attr(title);
         }
