fix: Integration page style adjustment

--- a/apps/web/src/pages/integration/components/integration/style.less
+++ b/apps/web/src/pages/integration/components/integration/style.less
@@ -1,6 +1,6 @@
 .@{prefix}-int-card {
     // width: 322px;
-    padding: @padding-sm;
+    padding: @padding-md;
     background-color: var(--component-background);
     border: 1px solid var(--component-background);
     border-radius: @border-radius-base;
@@ -59,11 +59,13 @@
         display: flex;
         align-items: center;
         margin-right: @margin-sm;
+        font-size: @font-size-base;
+        line-height: 1;
         color: var(--text-color-secondary);
 
         .@{mui-prefix}SvgIcon-root {
-            margin-right: @margin-xs;
-            font-size: @font-size-xl;
+            margin-right: @margin-xxs;
+            font-size: @font-size-lg;
         }
     }
 
