--- a/apps/web/src/pages/integration/views/integration-detail/components/msc-content/functions/style.less
+++ b/apps/web/src/pages/integration/views/integration-detail/components/msc-content/functions/style.less
@@ -1,7 +1,7 @@
 .@{prefix}-int-feat-card {
     padding: @padding-lg;
     background-color: var(--component-background);
-    border: 1px solid var(--border-color-base);
+    border: 1px solid transparent;
     border-radius: @border-radius-sm;
     cursor: pointer;
     transition: .3s;
