--- a/apps/web/src/pages/integration/views/integration-detail/style.less
+++ b/apps/web/src/pages/integration/views/integration-detail/style.less
@@ -41,11 +41,13 @@
                     display: flex;
                     align-items: center;
                     margin-right: @margin-sm;
+                    font-size: @font-size-base;
+                    line-height: 1;
                     color: var(--text-color-secondary);
 
                     .@{mui-prefix}SvgIcon-root {
-                        margin-right: @margin-xs;
-                        font-size: @font-size-xl;
+                        margin-right: @margin-xxs;
+                        font-size: @font-size-lg;
                     }
                 }
             }
