fix: Checkbox and TablePro components style adjustment

--- a/apps/web/src/styles/index.less
+++ b/apps/web/src/styles/index.less
@@ -93,6 +93,8 @@ body {
     }
 
     .@{mui-prefix}Tabs-scrollButtons {
+        height: 40px;
+        margin-top: 1px;
         color: var(--text-color-secondary);
     }
 
