--- a/apps/web/src/styles/mui-polyfill.less
+++ b/apps/web/src/styles/mui-polyfill.less
@@ -60,7 +60,7 @@ input.@{mui-prefix}InputBase-input {
     }
 }
 
-// -----------Dialog---------------
+// ---------- Dialog ----------
 .@{mui-prefix}Dialog-container {
     .@{mui-prefix}Paper-root.@{mui-prefix}Dialog-paper {
         border-radius: @border-radius-md;
@@ -76,5 +76,18 @@ input.@{mui-prefix}InputBase-input {
         border-radius: unset;
         box-shadow: 0 0 0 1000px #2b2b2b inset;
         -webkit-text-fill-color: var(--text-color-base);
+    }
+}
+
+// ---------- Select ----------
+.@{mui-prefix}Checkbox-root.@{mui-prefix}-disabled {
+    color: var(--border-color-gray);
+
+    &::after {
+        position: absolute;
+        inset: 13px;
+        background-color: var(--gray-color-1);
+        border-radius: 2px;
+        content: '';
     }
 }
