--- a/apps/web/src/plugin/plugins/data-card/view/style.less
+++ b/apps/web/src/plugin/plugins/data-card/view/style.less
@@ -4,7 +4,7 @@
     width: 100%;
     min-width: 100%;
     height: 100%;
-    padding: @padding-lg;
+    padding: @padding-md;
     overflow: hidden;
     background: var(--main-background);
 
