fix: The optimization of workflow page style and interactions

--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/conditions-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/conditions-input/style.less
@@ -1,7 +1,7 @@
 .@{prefix}-conditions-input {
 
     &-add-btn.@{mui-prefix}ButtonBase-root {
-        font-weight: @font-weight-bold;
+        font-weight: @font-weight-medium;
         color: var(--text-color-base);
         border-color: var(--border-color-base);
 
@@ -36,13 +36,13 @@
                         height: 1px;
                         margin-bottom: -1px;
                         overflow: hidden;
-                        font-weight: @font-weight-bold;
+                        font-weight: @font-weight-medium;
                         visibility: hidden;
                         content: attr(aria-label);
                     }
 
                     &.@{mui-prefix}-selected {
-                        font-weight: @font-weight-bold;
+                        font-weight: @font-weight-medium;
                         background-color: var(--component-background);
                     }
                 }
