--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/email-content/style.module.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/email-content/style.module.less
@@ -12,7 +12,7 @@
 
         .text {
             font-size: @font-size-base;
-            font-weight: @font-weight-bold;
+            font-weight: @font-weight-medium;
             .line-height(@font-size-base);
 
             color: var(--text-color-secondary);
