--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/test-drawer/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/test-drawer/style.less
@@ -42,7 +42,7 @@
     &-title {
         flex: 1;
         width: 0;
-        font-weight: @font-weight-bold;
+        font-weight: @font-weight-medium;
         .text-size(@font-size-xxl);
     }
 
