--- a/apps/web/src/pages/workflow/views/editor/components/entry-panel/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/entry-panel/style.less
@@ -15,7 +15,7 @@
 
     &-header {
         padding: @padding-md @padding-xl;
-        font-weight: @font-weight-bold;
+        font-weight: @font-weight-medium;
         .text-size(@font-size-xxl);
     }
 
@@ -91,7 +91,7 @@
             &-name {
                 .text-size(@font-size-lg);
 
-                font-weight: @font-weight-bold;
+                font-weight: @font-weight-medium;
             }
 
             &-desc {
