--- a/apps/web/src/pages/workflow/views/editor/components/ifelse-node/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/ifelse-node/style.less
@@ -6,7 +6,7 @@
     }
 
     &-title {
-        font-weight: @font-weight-bold;
+        font-weight: @font-weight-medium;
         text-align: right;
         .text-size(@font-size-base);
     }
