--- a/apps/web/src/pages/workflow/views/editor/components/test-button/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/test-button/style.less
@@ -84,7 +84,7 @@
         }
 
         &__title {
-            font-weight: @font-weight-bold;
+            font-weight: @font-weight-medium;
             .text-size(@font-size-base);
         }
 
