--- a/apps/web/src/pages/workflow/views/editor/components/topbar/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/topbar/style.less
@@ -61,13 +61,13 @@
                     height: 1px;
                     margin-bottom: -1px;
                     overflow: hidden;
-                    font-weight: @font-weight-bold;
+                    font-weight: @font-weight-medium;
                     visibility: hidden;
                     content: attr(aria-label);
                 }
 
                 &.@{mui-prefix}-selected {
-                    font-weight: @font-weight-bold;
+                    font-weight: @font-weight-medium;
                     background-color: var(--component-background);
                 }
             }
