--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-input/style.less
@@ -18,7 +18,7 @@
     }
 
     & &-add-btn {
-        font-weight: @font-weight-bold;
+        font-weight: @font-weight-medium;
         color: var(--text-color-base);
         border-color: var(--border-color-base);
 
