--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/style.less
@@ -59,10 +59,10 @@
             flex: 1;
             width: 0;
             margin-right: @margin-xs;
-            font-weight: @font-weight-bold;
+            font-weight: @font-weight-medium;
 
             .@{prefix}-editable-text-input {
-                font-weight: @font-weight-bold;
+                font-weight: @font-weight-medium;
             }
         }
 
@@ -126,7 +126,7 @@
                 gap: @margin-xxs;
                 align-items: center;
                 margin-bottom: @margin-md;
-                font-weight: @font-weight-bold;
+                font-weight: @font-weight-medium;
                 .text-size(@font-size-lg);
 
                 .@{prefix}-tooltip {
