feat: dashboard plugin list ui adjustment

--- a/apps/web/src/pages/dashboard/components/plugin-list-class/style.less
+++ b/apps/web/src/pages/dashboard/components/plugin-list-class/style.less
@@ -24,7 +24,7 @@
             text-align: center;
             background: var(--gray-color-1);
             border: 1px solid transparent;
-            border-radius: @border-radius-sm;
+            border-radius: @border-radius-md;
             cursor: pointer;
 
             &:hover {
