--- a/apps/web/src/pages/dashboard/components/plugin-list/style.less
+++ b/apps/web/src/pages/dashboard/components/plugin-list/style.less
@@ -11,7 +11,7 @@
     }
 
     &-item {
-        padding: 0 @padding-sm;
+        padding: 0 @padding-xs;
         margin-bottom: @margin-xxl;
 
         &-content {
@@ -19,7 +19,7 @@
             text-align: center;
             background: var(--gray-color-1);
             border: 1px solid transparent;
-            border-radius: @border-radius-sm;
+            border-radius: @border-radius-md;
             cursor: pointer;
 
             &:hover {
