--- a/apps/web/src/pages/dashboard/style.less
+++ b/apps/web/src/pages/dashboard/style.less
@@ -114,15 +114,16 @@
         }
 
         &-empty {
-            // display: flex;
-            // flex: 1;
-            // flex-direction: column;
-            // justify-content: center;
+            display: flex;
+            flex: 1;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
             overflow-y: auto;
-            text-align: center;
 
             &-title {
-                font-size: @font-size-6;
+                font-size: @font-size-5;
+                .line-height(@font-size-5);
             }
 
             &-description {
