feat: dashboard font weight change 600 to 500

--- a/apps/web/src/plugin/plugins/gauge-chart/view/style.less
+++ b/apps/web/src/plugin/plugins/gauge-chart/view/style.less
@@ -9,7 +9,7 @@
     background: var(--main-background);
 
     &__header {
-        font-weight: @font-weight-bold;
+        font-weight: @font-weight-medium;
     }
 
     &__content {
