--- a/apps/web/src/plugin/plugins/icon-remaining/view/style.less
+++ b/apps/web/src/plugin/plugins/icon-remaining/view/style.less
@@ -7,14 +7,14 @@
     padding: @padding-md;
     background: var(--main-background);
 
-    &-preview { 
+    &-preview {
         width: 170px;
         min-width: auto;
         height: 236px;
     }
 
     &__header {
-        font-weight: @font-weight-bold;
+        font-weight: @font-weight-medium;
     }
 
     &__content {
