--- a/apps/web/src/plugin/plugins/pie-chart/view/style.less
+++ b/apps/web/src/plugin/plugins/pie-chart/view/style.less
@@ -9,7 +9,7 @@
 
     &__header {
         font-size: @font-size-lg;
-        font-weight: @font-weight-bold;
+        font-weight: @font-weight-medium;
     }
 
     &__content {
