--- a/apps/web/src/plugin/plugins/switch/view/style.module.less
+++ b/apps/web/src/plugin/plugins/switch/view/style.module.less
@@ -23,11 +23,11 @@
         flex-direction: column;
         align-items: flex-start;
         justify-content: center;
+    }
 
-        .text {
-            font-size: @font-size-lg;
-            font-weight: @font-weight-bold;
-        }
+    .text {
+        font-weight: @font-weight-medium;
+        .text-size(@font-size-base);
     }
 
     .icon {
