--- a/packages/shared/src/components/modal/style.less
+++ b/packages/shared/src/components/modal/style.less
@@ -7,8 +7,24 @@
             }
         }
 
+        .@{prefix}-modal-close-icon {
+            position: absolute;
+            top: 19px;
+            right: 24px;
+            font-size: @font-size-lg;
+            color: var(--icon-color-gray-secondary);
+        }
+
+        .@{prefix}-modal-content {
+            padding: @padding-xl;
+
+            .@{mui-prefix}FormControl-root:last-child {
+                margin-bottom: 0;
+            }
+        }
+
         .@{prefix}-modal-footer {
-            padding: 0 @padding-xl @padding-md;
+            padding: 0 @padding-xl @padding-xl;
         }
     }
 }
