--- a/apps/web/src/pages/workflow/views/editor/components/test-button/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/test-button/style.less
@@ -4,7 +4,8 @@
         border-color: var(--border-color-base);
 
         &:hover {
-            background-color: var(--component-background-gray);
+            z-index: 1;
+            // background-color: var(--component-background-gray);
         }
 
         &:first-child {
