fix: Integration page layout and Modal component style adjustment

--- a/apps/web/src/pages/integration/style.less
+++ b/apps/web/src/pages/integration/style.less
@@ -1,7 +1,8 @@
 .@{prefix}-view.@{prefix}-view-integration {
     display: flex;
     flex-direction: column;
-    padding: 0;
+    padding: @padding-lg;
+    overflow: auto;
 
     .@{prefix}-tab-content {
         position: relative;
